<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/theme_paddig"
    tools:context=".ui.laporan.LaporanFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="@dimen/theme_paddig"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/theme_paddig"
            android:orientation="vertical"
            android:layout_marginRight="40dp">

            <ImageButton
                android:id="@+id/btnpenghuni"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape1"
                android:src="@drawable/ic_menu_penghuni" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="8pt"
                android:text="Laporan"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="8pt"
                android:textStyle="bold"
                android:text="@string/penghuni"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/theme_paddig"
            android:orientation="vertical"
            android:layout_marginLeft="40dp">
            <ImageButton
                android:id="@+id/btnunit"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape1"
                android:src="@drawable/ic_menu_unit" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="8pt"
                android:text="Laporan"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="8pt"
                android:textStyle="bold"
                android:text="@string/unit"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/theme_paddig"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/theme_paddig"
            android:orientation="vertical"
            android:layout_marginRight="40dp">

            <ImageButton
                android:id="@+id/btnbayar"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape1"
                android:src="@drawable/ic_menu_pembayaran" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="8pt"
                android:text="Laporan"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="8pt"
                android:textStyle="bold"
                android:text="@string/pembayaran"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/theme_paddig"
            android:orientation="vertical"
            android:layout_marginLeft="40dp">
            <ImageButton
                android:id="@+id/btnuser"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape1"
                android:src="@drawable/ic_menu_user" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="8pt"
                android:text="Laporan"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="8pt"
                android:textStyle="bold"
                android:text="@string/user"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/theme_paddig"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/theme_paddig"
            android:orientation="vertical"
            android:layout_marginRight="40dp">

            <ImageButton
                android:id="@+id/btnpengaduan"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape1"
                android:src="@drawable/ic_menu_pengaduan" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="8pt"
                android:text="Laporan"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="8pt"
                android:textStyle="bold"
                android:text="Pengaduan"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/theme_paddig"
            android:orientation="vertical"
            android:layout_marginLeft="40dp">
            <ImageButton
                android:id="@+id/btncekbayar"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape1"
                android:src="@drawable/ic_menu_cekpembayaran" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="8pt"
                android:text="Cek Status"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="8pt"
                android:textStyle="bold"
                android:text="Pembayaran Penghuni"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>